--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,5 +8,6 @@ $color-blue: #092259;
 $color-gray: #c0bcbc;
 $color-light-gray: #d9d9d9;
 $color-red: #af2035e6;
+$color-yellow: #ffc550;
 
 $padding-container-horizontal: 2.5rem;
