--- a/src/components/slider/Slider.scss
+++ b/src/components/slider/Slider.scss
@@ -33,8 +33,8 @@
 
       button {
         &.current {
-          color: #ffc550;
-          border-bottom: 0.2rem solid #ffc550;
+          color: $color-yellow;
+          border-bottom: 0.2rem solid $color-yellow;
         }
       }
     }
@@ -155,6 +155,7 @@
             font-size: 2rem;
             font-weight: 700;
             color: $color-blue;
+            line-height: 1.2;
             height: 4.8em;
             overflow: hidden;
             text-overflow: ellipsis;
