--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -142,6 +142,10 @@
       justify-content: space-between;
       align-items: center;
 
+      p {
+        max-width: calc(100% - 7rem);
+      }
+
       .link-container {
         display: flex;
         justify-content: space-between;
