--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -3,7 +3,7 @@
 .home {
   &__landing {
     aspect-ratio: 1600/715;
-    background: url('../../backgrounds/home-landing3.png') $color-gray;
+    background: url('src/backgrounds/home-landing3.png') $color-gray;
     background-size: cover;
     background-position: center;
     width: 100%;
